# remote-notify

./: README.md  pyproject.toml  setup.cfg  setup.py
remote_notify/: __init__.py  __main__.py  cli.py  config.py  core.py
